--- a/app/src/main/res/layout/fragment_notification_tab.xml
+++ b/app/src/main/res/layout/fragment_notification_tab.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
+    android:id="@+id/ly2"
     android:background="#F3E5F5"
     tools:context=".NotificationTabFragment">
 
