--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:padding="20dp"
     android:background="#EDE7F6"
-    android:gravity="center_vertical"
-    android:paddingTop="40dp"
     tools:context=".ScheduleFragment">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:paddingTop="40dp">
 
 
     <TextView
@@ -27,6 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Task Title"
+        android:textColorHint="@color/black"
         android:textColor="#6A1B9A"
         android:padding="12dp"
         android:textSize="16sp"
@@ -39,6 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Task Description"
+        android:textColorHint="@color/black"
         android:textColor="#6A1B9A"
         android:padding="12dp"
         android:textSize="16sp"
@@ -51,6 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Select Date"
+        android:textColorHint="@color/black"
         android:textColor="#6A1B9A"
         android:padding="12dp"
         android:textSize="16sp"
@@ -63,6 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Select Time"
+        android:textColorHint="@color/black"
         android:textColor="#6A1B9A"
         android:padding="12dp"
         android:textSize="16sp"
@@ -74,20 +81,38 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Task Status"
+        android:textColorHint="@color/black"
         android:textColor="#6A1B9A"
         android:padding="12dp"
         android:textSize="16sp"
         android:layout_marginBottom="24dp"
         android:inputType="text"/>
 
+        <EditText
+            android:id="@+id/taskcat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Category"
+            android:textColorHint="@color/black"
+            android:textColor="#6A1B9A"
+            android:padding="12dp"
+            android:textSize="16sp"
+            android:layout_marginBottom="24dp"
+            android:inputType="text"/>
+
     <Button
         android:id="@+id/saveButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Save Task"
+        android:textColorHint="@color/black"
         android:textColor="#fff"
         android:background="@color/purple"
         android:textSize="16sp"
         android:padding="14dp"
         android:layout_marginBottom="24dp"/>
-</LinearLayout>
+
+    </LinearLayout>
+
+
+</ScrollView>
