--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.TaskSchedulerApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Theme.TaskSchedulerApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Customize your light colors -->
+        <item name="colorPrimary">#6A1B9A</item>
+        <item name="colorOnPrimary">#FFFFFF</item>
+        <item name="android:background">#FFFFFF</item>
+        <item name="android:textColor">#000000</item>
     </style>
-
-    <style name="Theme.TaskSchedulerApp" parent="Base.Theme.TaskSchedulerApp" />
 </resources>
