--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -61,7 +61,9 @@
         android:padding="12dp"
         android:textSize="16sp"
         android:layout_marginBottom="20dp"
-        android:inputType="date"/>
+        android:focusable="false"
+        android:clickable="true"
+        android:inputType="none"/>
 
 
     <EditText
@@ -74,7 +76,9 @@
         android:padding="12dp"
         android:textSize="16sp"
         android:layout_marginBottom="20dp"
-        android:inputType="time"/>
+        android:focusable="false"
+        android:clickable="true"
+        android:inputType="none"/>
 
     <EditText
         android:id="@+id/taskStatus"
