--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -86,8 +86,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Done"
-            android:textColor="#FFFFFF"
-            android:backgroundTint="#388E3C"
             android:layout_marginEnd="8dp" />
 
         <Button
@@ -95,17 +93,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Update"
-            android:textColor="#FFFFFF"
-            android:backgroundTint="#303F9F"
             android:layout_marginEnd="8dp" />
 
         <Button
             android:id="@+id/btnDelete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Delete"
-            android:textColor="#FFFFFF"
-            android:backgroundTint="#D32F2F" />
+            android:text="Delete" />
     </LinearLayout>
 
 </LinearLayout>
