--- a/app/src/main/res/layout/fragment_profile_tab.xml
+++ b/app/src/main/res/layout/fragment_profile_tab.xml
@@ -31,6 +31,7 @@
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:enabled="false"
+        android:inputType="textPersonName"
         android:layout_marginBottom="16dp" />
 
     <!-- Email Input -->
@@ -43,6 +44,7 @@
         android:textColor="#333333"
         android:gravity="center"
         android:enabled="false"
+        android:inputType="textEmailAddress"
         android:layout_marginBottom="16dp" />
 
     <!-- Dark Mode Toggle -->
